<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeyLifePlanner_Main" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/avatarActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/viewAchievements"
        android:layout_below="@+id/viewAchievements"
        android:layout_marginTop="14dp"
        android:background="@color/AvatarButtonColor"
        android:text="@string/AvatarButtonLabel" />

    <Button
        android:id="@+id/calendarActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:background="@color/CalendarButtonColor"
        android:text="@string/CalendarButtonLabel" />

    <Button
        android:id="@+id/viewAchievements"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/calendarActivity"
        android:layout_below="@+id/calendarActivity"
        android:layout_marginTop="15dp"
        android:background="@color/AchievementsButtonColor"
        android:text="@string/AchievementsButtonLabel" />
    
     <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="100dp" 
	    android:layout_marginTop="250dp"
	    android:layout_marginLeft="100dp"
	    android:layout_marginRight="100dp"
	    
	    android:src="@drawable/ic_launcher" />

</RelativeLayout>