<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2C2C2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/LoginLabel"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/UsernameLabel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/UsernameLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/submitLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/greenbutton"
        android:text="@string/SubmitButtonLabel"
        android:textSize="25sp" />

</LinearLayout>