<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C2C2C2"
    tools:context=".AddTaskActivity" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/namelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namelabel" />
        <EditText
            android:id="@+id/taskname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:background="@color/white"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text" >
            <requestFocus />
        </EditText>

     </LinearLayout>
     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorylabel" />
        
        <Spinner
            android:id="@+id/task_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/taskname"
            android:layout_below="@+id/taskname"
            android:layout_marginTop="19dp"
            android:entries="@array/task_types" />
        
        </LinearLayout>

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

         <TextView
            android:id="@+id/dueby_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duebylabel" />
         <Spinner
            android:id="@+id/day"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:entries="@array/days" />
        <Spinner
            android:id="@+id/time_due"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/submit"
            android:layout_alignTop="@+id/task_spinner"
            android:layout_marginRight="22dp"
            android:entries="@array/times" />
        </LinearLayout>
        
           <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/taskname"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="51dp"
            android:background="@color/AddTaskButtonColor"
            android:text="@string/SubmitButtonLabel" />
</LinearLayout>